# TubeHarvester

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  run_tests.py
docs/: main_doc.md  run_tests_doc.md
docs/src_docs/: BatchDownloader_doc.md  ChannelScraper_doc.md  CookieManager_doc.md  GUI_doc.md  Mp3_Converter_doc.md  Mp4_Converter_doc.md  PlaylistScraper_doc.md  __init___doc.md  utils_doc.md
docs/tests_docs/: init_doc.md  test_batch_downloader_doc.md  test_batch_mp3_downloading_doc.md  test_channel_scraper_doc.md  test_cookie_manager_doc.md  test_gui_doc.md  test_mp3_converter_doc.md  test_mp4_converter_doc.md  test_playlist_scraper_doc.md  test_playlist_url_handling_doc.md  test_youtube_mix_playlists_doc.md
src/: BatchDownloader.py  ChannelScraper.py  CookieManager.py  GUI.py  Mp3_Converter.py  Mp4_Converter.py  PlaylistScraper.py  README.md  __init__.py  utils.py
tests/: README.md  __init__.py  test_batch_downloader.py  test_batch_mp3_downloading.py  test_channel_scraper.py  test_cookie_manager.py  test_gui.py  test_mp3_converter.py  test_mp4_converter.py  test_playlist_scraper.py  test_playlist_url_handling.py  test_youtube_mix_playlists.py
